# aip-swarm-portfolio

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  PORTFOLIO_KO.md  README.md  aip_env.sh  diag.sh  fastdds_local.xml  run_central.sh  run_patrol_solo.sh  run_sim.sh  run_sim_solo.sh
.github/: pull_request_template.md
config/: fastdds_client_profile.xml  fastdds_discovery_server.xml  fastdds_no_shm_profile.xml  fastdds_sim_profile.xml  twist_mux.yaml
docs/: ANALYSIS.md  ARCHITECTURE.md  CENTRAL_AI.md  CHANGESET_FOR_PR_KO.md  DEVELOPMENT_TIMELINE.md  HANDOFF.md  HANDOFF_REAL_WS.md  INTERVIEW_EXPLANATION_NOTES.md  PROGRESS_2026W17.md  PROJECT_FACTS.md  PROJECT_OVERVIEW.md  PR_REVIEW_NOTES_KO.md  REAL_VEHICLE_OPERATION.md  REAL_WS.md  SCOUT_LOCALIZATION_HW.md  SECURITY.md  SETUP_HARDWARE.md  SETUP_RPI4.md  SETUP_UBUNTU.md  SETUP_WINDOWS.md  SWARM_LOCALIZATION.md  TEAM_ONBOARDING.md  TECH_STACK.md  TEST_AND_LIMITATIONS.md  VISION.md  VISION_PI_DIRECT_STREAM_KO.md  VISION_PI_STATUS_2026-06-28_KO.md  WEB_CONTROL_RUNBOOK_KO.md  WHAT_I_DID.md  interview-notes.md
firmware/: README.md
scripts/: check_web_control_stack.sh  deploy_main_agv.sh  dev_mjpeg_stream.py  export_to_ubuntu.sh  manage_status_overlays.py  rpi_bringup.sh  (+6 more)
src/aip_fleet_autonomous/: package.xml  setup.cfg  setup.py
src/aip_fleet_autonomous/aip_fleet_autonomous/: follower_trigger_node.py  keepout_zone_node.py  map_readiness_node.py  patrol_node.py  patrol_planner_node.py
src/aip_fleet_autonomous/behavior_trees/: navigate_w_collision_recovery.xml
src/aip_fleet_autonomous/config/: patrol_plan_template.yaml  patrol_waypoints_example.yaml
src/aip_fleet_autonomous/launch/: autonomous_nav.launch.py  fleet_autonomous.launch.py  leader_nav.launch.py
src/aip_fleet_autonomous/params/: nav2_full.yaml  nav2_override_peer1.yaml
src/aip_fleet_bringup/: CMakeLists.txt  package.xml
src/aip_fleet_bringup/config/: supervisor.yaml  supervisor_peers.yaml  twist_mux_vehicle.yaml
src/aip_fleet_bringup/launch/: central.launch.py  central_real_single_process.launch.py
src/aip_fleet_bringup/scripts/: central_real_combined.py  udp_status_heartbeat_adapter.py
src/aip_fleet_bringup/test/: test_udp_status_heartbeat_adapter.py
src/aip_fleet_coordinator/: package.xml  setup.cfg  setup.py
src/aip_fleet_coordinator/aip_fleet_coordinator/: coordinator_node.py  scout_localizer_node.py  uwb_localizer_node.py
src/aip_fleet_dashboard/: package.xml  setup.cfg  setup.py
src/aip_fleet_dashboard/aip_fleet_dashboard/: dashboard_server.py
src/aip_fleet_dashboard/static/: index.html
src/aip_fleet_gazebo/: CMakeLists.txt  package.xml
src/aip_fleet_gazebo/config/: heat_sources.yaml
src/aip_fleet_gazebo/launch/: fleet_phase2.launch.py  ign_fleet.launch.py  spawn_vehicle.launch.py
src/aip_fleet_gazebo/scripts/: arm_scan_node.py  cmd_relay.py  coverage_tracker_node.py  joint_states_relay.py  odom_frame_fixer.py  peer_obstacle_node.py  scenario_manager_node.py  sim_heartbeat_node.py  sim_peer_sensing_node.py  sim_pose_relay_node.py  sim_thermal_node.py  stuck_escape_node.py  uwb_accuracy_check.py
src/aip_fleet_gazebo/worlds/: fleet_world.sdf
src/aip_fleet_msgs/: CMakeLists.txt  package.xml
src/aip_fleet_msgs/msg/: FleetHeartbeat.msg  FleetStatus.msg  OverrideCommand.msg  PeerPose.msg  PeerPoseArray.msg  PeerRange.msg  PeerRangeArray.msg  PerceptionAlert.msg
src/aip_fleet_msgs/srv/: AssignMission.srv
src/aip_fleet_nav/: CMakeLists.txt  package.xml
src/aip_fleet_nav/launch/: nav_follower.launch.py  rviz_phase2.launch.py  slam_leader.launch.py
src/aip_fleet_nav/params/: amcl.yaml  ekf_vehicle.yaml  nav2_params.yaml  slam_toolbox_online.yaml
src/aip_fleet_nav/rviz/: phase2.rviz
src/aip_fleet_perception/: package.xml  setup.cfg  setup.py
src/aip_fleet_perception/aip_fleet_perception/: alert_visualizer_node.py  arm_scan_node.py  central_fusion_node.py  patrol_monitor_node.py  thermal_driver_node.py  thermal_uart_driver_node.py  vision_pi_bridge_node.py
src/aip_fleet_perception/config/: arm_config.yaml  calibration.yaml  camera_info_csi.yaml  camera_info_usb.yaml  thresholds.yaml
src/aip_fleet_perception/launch/: arm_scan.launch.py  camera_driver.launch.py  perception_central.launch.py  perception_vehicle.launch.py  thermal_only.launch.py  vision_pi_bridge.launch.py
src/aip_fleet_real/: package.xml  setup.cfg  setup.py
src/aip_fleet_real/aip_fleet_real/: heartbeat_pub.py  scan_deskew_node.py  serial_bridge.py
src/aip_fleet_real/config/custom_vehicle/: nav2.yaml  slam_toolbox.yaml
src/aip_fleet_real/config/main_agv/: amcl.yaml  nav2.yaml  patrol.yaml  slam_toolbox.yaml  twist_mux.yaml  ydlidar.yaml
src/aip_fleet_real/config/turtlebot3/: nav2.yaml  nav2_sim.yaml  patrol.yaml  patrol_sim.yaml  slam_toolbox.yaml  slam_toolbox_sim.yaml  twist_mux.yaml
src/aip_fleet_real/launch/: aip1_auto_mapping.launch.py  aip1_localization.launch.py  aip1_mapping.launch.py  custom_vehicle.launch.py  fleet_main.launch.py  fleet_real.launch.py  main_agv.launch.py  turtlebot3.launch.py  turtlebot3_sim.launch.py  urdf_preview.launch.py
src/aip_fleet_real/meshes/: arm_base_link.STL  arm_link_1.STL  arm_link_2.STL  arm_link_3.STL  arm_link_4.STL  ball_caster_link.STL  base_link.STL  left_wheel_link.STL  lidar_link.STL  right_wheel_link.STL
src/aip_fleet_real/rviz/: fleet_lidar.rviz  main_agv.rviz  urdf_preview.rviz
src/aip_fleet_real/urdf/: aip1.urdf
src/aip_fleet_sim/: package.xml  setup.cfg  setup.py
src/aip_fleet_sim/aip_fleet_sim/: demo_patrol_node.py  sim_lidar_node.py  sim_vehicle_node.py  sim_world_node.py  world.py
src/aip_fleet_sim/config/: vehicles.yaml  world.yaml
src/aip_fleet_sim/launch/: fleet_sim.launch.py
src/aip_fleet_sim/test/: test_world.py
src/aip_fleet_telemetry/: package.xml  setup.cfg  setup.py
src/aip_fleet_telemetry/aip_fleet_telemetry/: telemetry_node.py
src/aip_main_description/: CMakeLists.txt  package.xml
src/aip_main_description/config/: ros2_controllers_base.yaml
src/aip_main_description/urdf/: main_agv.urdf.xacro
(+93 files in other folders)
