<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aip_fleet_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for the AIP central PC and simulated fleet.</description>
  <maintainer email="aip@example.com">AIP Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>aip_fleet_supervisor</exec_depend>
  <exec_depend>aip_fleet_msgs</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>twist_mux</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
