<?xml version="1.0"?>
<package format="3">
  <name>aip_fleet_dashboard</name>
  <version>0.1.0</version>
  <description>AIP Fleet standalone central control dashboard (FastAPI + WebSocket)</description>
  <maintainer email="dst04072@gmail.com">AIP Team</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>aip_fleet_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-fastapi</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pil</exec_depend>
  <exec_depend>uvicorn</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
