<?xml version="1.0"?>
<package format="3">
  <name>aip_fleet_perception</name>
  <version>0.1.0</version>
  <description>
  Thermal + RGB sensor fusion for patrol anomaly and fire hazard detection.

  Pi 4 nodes  : thermal_driver_node (MLX90640), patrol_monitor_node (threshold filter)
  Main PC node: central_fusion_node (YOLOv8 + thermal fusion → /fleet/alerts)
  </description>
  <maintainer email="aip@example.com">AIP Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>aip_fleet_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
