<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aip_fleet_telemetry</name>
  <version>0.1.0</version>
  <description>Fleet telemetry bridge: /fleet/status → InfluxDB 2.x.</description>
  <maintainer email="aip@example.com">AIP Team</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>aip_fleet_msgs</exec_depend>
  <!-- influxdb-client installed via pip: pip3 install influxdb-client -->
  <!-- Node runs in dry-run mode if not installed (logs points to DEBUG). -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
